[package]
name = "rlib"
version = "0.1.0"
authors = ["jzx <945627077@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"

[lib]
crate-type=["staticlib"]

[profile.release]
panic="abort"
[profile.dev]
panic="abort"
